Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: projnamespace
spec:
  type: ClusterIP
  selector:
    app: spring-petclinic-microservices-main
    env: envtestkii
  ports:
    - name: http
      port: 9090
      targetPort: 9090
